@@ -14,8 +14,6 @@ Release Critical
 Pending Patches
 ---------------
 
-    - xml schema
-
 Long term breakage
 ------------------
 
