@@ -27,9 +27,10 @@ typedef enum
     GNUM_XML_V5,	/* >= 0.58 */
     GNUM_XML_V6,	/* >= 0.62 */
     GNUM_XML_V7,        /* >= 0.66 */
+    GNUM_XML_V8,        /* >= 0.71 */
     
-    /* NOTE : Keep this up to date */
-    GNUM_XML_LATEST = GNUM_XML_V7
+    /* NOTE : Keep this up to date (and in sync with the schema) */
+    GNUM_XML_LATEST = GNUM_XML_V8
 } GnumericXMLVersion;
 
 typedef struct _XmlParseContext XmlParseContext;
